--- a/todo-cli/.eslintrc.json
+++ b/todo-cli/.eslintrc.json
@@ -1,13 +1,21 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es2021": true
-  },
-  "extends": "standard",
-  "overrides": [],
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  },
-  "rules": {}
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es2021": true
+    },
+    "extends": "standard",
+    "overrides": [
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest"
+    },
+    "rules": {
+    },
+    "lint-staged": {
+        "*.js": [
+          "eslint",
+          "prettier --write ."
+        ]
+    }
 }
