--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -10,14 +10,14 @@
   "author": "wasihun code <wasihunageru7947@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.34.0",
+    "eslint": "^8.36.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
     "jest": "^29.4.3",
-    "lint-staged": "^13.1.2",
+    "lint-staged": "^13.2.0",
     "prettier": "^2.8.4"
   },
   "lint-staged": {
@@ -25,5 +25,10 @@
       "eslint",
       "prettier --write ."
     ]
+  },
+  "dependencies": {
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.29.0"
   }
 }
