--- a/todo-cli/config/config.json
+++ b/todo-cli/config/config.json
@@ -20,7 +20,7 @@
     "password": "password",
     "database": "todo_db_prod",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   }
 }
-
