--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -18,7 +18,8 @@
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "sequelize-cli": "^6.6.0"
   },
   "lint-staged": {
     "*.js": [
@@ -27,8 +28,8 @@
     ]
   },
   "dependencies": {
-    "pg": "^8.9.0",
+    "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.3"
   }
 }
