Production variable updated

--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -22,14 +22,7 @@
       
   },
   "production": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres",
-    "dialectOptions": { 
-        "requestTimeout": 5000 
-    }
-      
+    "use_env_variable" : "DATABASE_URL",
+    "dialect": "postgres"
   }
 }
