--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -14,9 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "csurf": "^1.11.0",
     "express": "^4.18.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
